# substrate-node-template

./: .editorconfig
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/collectibles/: Cargo.toml
pallets/collectibles/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
